--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -500,7 +500,7 @@ page-gallery-tabs {
                 height: 40vh;
                 margin: 0 auto;
                 border-radius: 5px;
-                 box-shadow:  0 0 5px #000000;
+                box-shadow: 20px #000000 !important;
                 h2 {
                     width: 100%;
                     border-radius: 8px 8px 0px 0px;
@@ -612,6 +612,58 @@ page-gallery-tabs {
             }
         }
     }
+    .contentSections {
+        margin: 0 auto;
+        width: 95%;
+        height: 50vh;
+        text-align: center;
+        padding: 0px 10px;
+        .mainTexts {
+            font-size: 2.5rem;
+        }
+          hr {
+            width: 50%;
+            background: rgb(196,148,51);
+            height: 5px;
+            text-align: left;
+            margin: -10px 0px;
+        }
+        .lestMainTexts { font-size: 2rem; }
+        .subTexts {
+            color: rgb(102,102,102);
+            padding: 0px 25px;
+            margin: 0 auto !important;
+            font-size: 1.5rem;
+            p { 
+                line-height: 1.8;
+            }
+        }
+        .alarmIcon {
+            font-size: 6rem;
+        }
+        .sched {
+            h4 { font-size: 1.5rem !important; }
+        }
+    }
+
+    .fourth {
+    padding: 50px 20px;
+}
+
+.menu-button {
+        text-align: center;
+        margin: 0 auto !important;
+        margin-top: 20px !important;
+        width: 20% !important;
+        background: rgb(196,148,51);
+        color: white;
+        border-radius: 20px;
+        h2 {
+            margin: 0 auto !important;
+            font-size: 15px !important;
+        }
+    }
+
     .deskCardHolder {
         padding: 0px 40px;
         .deskCards {
@@ -619,6 +671,7 @@ page-gallery-tabs {
                 display: inline-flex;
                 max-height: 25vh;
                 min-height: 25vh;
+                box-shadow: 20px #000000 !important;
                 img {
                     min-width: 27vh;
                     max-height: 25vh;
