--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -48,6 +48,8 @@ $colors: (
 
 );
 
+$card-md-box-shadow:0 4px 4px 0 rgba(0, 0, 0, .14), 0 5px 3px -4px rgba(0, 0, 0, .2), 0 3px 7px 0 rgba(0, 0, 0, .12);
+$card-wp-box-shadow:0 3px 3px 3px;
 
 // App iOS Variables
 // --------------------------------------------------
