--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -162,6 +162,7 @@ ion-toolbar {
 			color: white;
 			width: 100%;
 			border-radius: 10px;
+			padding: 18px;
 			h2 {
 				margin: 0 auto !important;
 				font-size: 15px !important;
