--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -14,17 +14,23 @@ page-gallery-tabs {
   }
  	#map {
     height: 100%;
-    box-shadow:0 0 20px rgba(0,0,0,0.3);
+    // box-shadow:0 0 20px rgba(0,0,0,0.3);
 	}
 	.mapContainer {
-		width: 95%;
+		width: 100%;
 		height: 50vh;
 		margin: 0 auto;
 		box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-		margin: 0 auto;
-		border: 3px solid rgb(29,29,29);
+		margin: 0px auto 50px auto;
+		// border: 3px solid rgb(29,29,29);
 	}
-
+      .mobSections {
+		  font-family: 'Josef Sans' !important;
+        .contactUs {
+            padding: 0px !important;
+            text-align: left !important;
+        }
+    }
 
    h1 {
         font-size: 4rem !important;
@@ -38,7 +44,6 @@ page-gallery-tabs {
     .parg p {
         line-height: 25px;
         font-size: 4.8vw;
-        font-family: Arial, Helvetica, sans-serif;
     }
     // .iconFont {
     //     font-size: 2rem;
@@ -60,7 +65,6 @@ page-gallery-tabs {
     .storeHours {
         color: #ffffff;
         
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         hr {
             width: 10%;
             background: rgb(29,29,29);
@@ -184,6 +188,7 @@ page-gallery-tabs {
         border-radius: 20px !important;
     }
     .welcomeText {
+        font-family: 'Josef Sans' !important;
 		font-size: 6rem !important;
         font-weight: bold;
         width: 100%;
@@ -225,11 +230,13 @@ page-gallery-tabs {
         font-size: 1.5rem;
         input {
             padding: 5px;
+			padding-top: 5px;	
         }
         button {
             color: #ffffff;
             font-size: 1.5rem;
             background: rgb(196,148,51);
+			padding-top: 5px;	
         }
     }
     .deskcontentSections {
@@ -389,7 +396,10 @@ page-gallery-tabs {
 			}
 		}		
 		
-	}
+    }
+    ion-app.md {
+        font-family: 'Josef Sans';
+    }
     .timeSched {
         text-align: center;
          .mainTexts { font-size: 2rem !important; }
@@ -407,14 +417,16 @@ page-gallery-tabs {
 			font-size: 15px !important;
 		}
     }
-    
+    .josefFont {
+        font-family: 'Josef Sans' !important;
+    }
     }
 	.goldenText { color: rgb(196,148,51);  }
     .card-lists {
         // padding: 20px;
         // border-radius: 20px;
         width: 100%;
-        margin: 30px;
+        margin: 50px;
         .lister {
             // margin-top: 10px !important;
             background: rgb(248,248,248);
@@ -426,14 +438,15 @@ page-gallery-tabs {
         .card-holder {
             .cards-content {
                 text-align: left;
+                        font-family: 'Josef Sans' !important;
+                        font-weight: 650;
                 .lister {
                     font-size: 2rem;
                     .cardLister {
                         margin-top: 20px;
-                        border-top: 2px solid rgb(211, 210, 210);
                         ion-card {
-                            font-family: 'Roboto';
-                            
+                            font-family: 'Josef Sans';
+                            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.20) !important;
                             img {
                                 width: 100%;
                                 min-height: 35vh;
@@ -459,6 +472,10 @@ page-gallery-tabs {
                                 }
                             }
                         }
+                    }
+                     .cardLister:first-child {
+                        // margin-top: 20px;
+                        border-top: 2px solid rgb(211, 210, 210) !important;
                     }
                 }
             }
