--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -167,7 +167,7 @@ page-settings {
 	}
     .cover {
 		// border-radius: 0px 0px 0px 150px !important;
-		 background: url('../assets/imgs/coverSub.jpg') no-repeat center center fixed;
+		 background: url('../assets/imgs/banner/contact.png') no-repeat center center fixed;
         position: relative;
         width: 100%;
         -webkit-background-size: cover;
