--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -157,7 +157,7 @@ page-gallery-tabs {
 	}
     .cover {
 		// border-radius: 0px 0px 0px 150px !important;
-		 background: url('../assets/imgs/coverSub.jpg') no-repeat center center fixed;
+		 background: url('../assets/imgs/banner/menu page.png') no-repeat center center fixed;
         position: relative;
         width: 100%;
         -webkit-background-size: cover;
