--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -136,7 +136,7 @@ page-notifications {
 	}
     .cover {
 		// border-radius: 0px 0px 0px 150px !important;
-		 background: url('../assets/imgs/coverSub.jpg') no-repeat center center fixed;
+		 background: url('../assets/imgs/banner/Events.png') no-repeat center fixed;
         position: relative;
         width: 100%;
         -webkit-background-size: cover;
