--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -30,7 +30,7 @@ ion-toolbar {
     }
 
 .black{
-    background-color:black;
+     background: url('../assets/imgs/banner/homepageMenu for today.png') no-repeat center center fixed;
 }
 
 	.fonty {
