--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -125,6 +125,10 @@ page-news {
 		// height: 40vh;
 	}
 
+	.menuDay{
+		background-image: url("assets/imgs/banner/homepageMenu for today.png");
+	}
+
 	.image {
 		min-height:30vw;
 		max-height:60vw;
