--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -387,7 +387,7 @@ page-gallery-tabs {
 	.menu-button {
 		text-align: center;
 		margin: 0 auto !important;
-		margin-top: 20px !important;
+		margin-top: 0px !important;
 		width: 50% !important;
 		background: rgb(196,148,51);
 		color: white;
@@ -545,11 +545,10 @@ page-gallery-tabs {
         color: #d32323;
     }
     .cover2 {
-		// background-image: url("assets/");
+		 background: url('../assets/imgs/banner/Events.png') no-repeat center center fixed;
 		position: relative;
 		box-shadow: -200px -35px 75px -51px rgba(0,0,0,0.75);
 		border: .5px solid black;
-        background-color: black;
         height: 20vw;
         max-height:500px;
         min-height:300px;
@@ -653,7 +652,7 @@ page-gallery-tabs {
 .menu-button {
         text-align: center;
         margin: 0 auto !important;
-        margin-top: 20px !important;
+        margin-top: 0px !important;
         width: 20% !important;
         background: rgb(196,148,51);
         color: white;
