--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -26,7 +26,7 @@ page-notifications {
     }
 
     .aboutImage{
-        margin-top:5vw;
+        margin:5vw;
     }
 
    h1 {
@@ -163,7 +163,7 @@ page-notifications {
     }
 
     .cover2 {
-        background-color: black;
+        background: url('../assets/imgs/banner/contact.png') no-repeat center center fixed;
         box-shadow: -200px -35px 75px -51px rgba(0,0,0,0.75);
         height: 20vw;
         max-height:500px;
@@ -406,11 +406,17 @@ page-notifications {
                 line-height: 1px;
             }
         }
+
+      .text-menu {
+        padding: 10px 20px 20px 35px;
+    }
+
         .subTexts2 {
             width:50%;
             margin-left:25%;
             line-height: 2;
             .goldenText {
+                width: 20px;
                 text-align:center;
                 font-size: 4rem;
                 line-height: 1px;
@@ -467,6 +473,7 @@ page-notifications {
         .subTexts2 {
             width:50%;
             margin-left:25%;
+            margin-bottom:10px;
             line-height: 2;
             .goldenText {
                 text-align:center;
