--- a/src/app/app.html
+++ b/src/app/app.html
@@ -22,10 +22,9 @@
 <ion-header class="header header-md" *ngIf="!checkApp" color="goldenBrown">
   <div color="goldenBrown" class="first-header headerDeskColor">
     <div>
-      <ion-row color="goldenBrown"
-       >
-        <p style="padding: 10px;margin:0 !important;width:200px;"> <ion-icon name="tablet-portrait" style="margin-right:8px !important;margin-left:20px !important;"></ion-icon> (+088) 589-8745</p>
-        <p style="padding: 10px;margin:0;width:300px"> <ion-icon  style="margin-right:8px !important;" name="time"></ion-icon> Business Hours: 8:00am - 11:30pm</p>
+      <ion-row color="goldenBrown">
+        <p style="padding: 10px;margin:0 !important;width:200px;"> <ion-icon name="tablet-portrait" style="margin-right:8px !important;margin-left:20px !important;vertical-align:middle;"></ion-icon> (+088) 589-8745</p>
+        <p style="padding: 10px;margin:0;width:300px"> <ion-icon  style="margin-right:8px !important;vertical-align:middle;" name="time"></ion-icon> Business Hours: 8:00am - 11:30pm</p>
       <!-- <ion-buttons style="margin-right:0;" class="bar-buttons bar-buttons-md">
       <button color="" ion-button="" *ngFor="let p of pagesDesk"
         class="bar-button bar-button-md bar-button-default bar-button-default-md">
