--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -48,8 +48,7 @@ $colors: (
 
 );
 
-$card-md-box-shadow:0 4px 4px 0 rgba(0, 0, 0, .14), 0 5px 3px -4px rgba(0, 0, 0, .2), 0 3px 7px 0 rgba(0, 0, 0, .12);
-$card-wp-box-shadow:0 3px 3px 3px;
+$card-md-box-shadow:4px 6px 4px 5px rgba(0, 0, 0, .03);
 
 // App iOS Variables
 // --------------------------------------------------
