--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -121,11 +121,11 @@ page-news {
 		border: .5px solid black;
         height: 45vw;
         max-height:700px;
-        min-height:300px;
+        		min-height:300px;
         // height: 40vh;
         img {
-                max-height: 52vw;
-    width: 100%;
+                
+    			width: 100%;
         }
 	}
 
@@ -177,7 +177,6 @@ page-news {
 		margin: 0 auto;
 		box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 		margin: 0 auto;
-		border: 3px solid rgb(29,29,29);
 	}
 	.inputSection {
         display: inline-flex;
@@ -188,6 +187,7 @@ page-news {
         input {
             padding: 15px;
             background-color:#EEF1EF;
+            border:none;
         }
         button {
             color: #ffffff;
@@ -252,6 +252,15 @@ page-news {
 	.category{
 		height:25vw !important;
 		max-height: 100px !important;
+	}
+
+	.category2{
+		height:25vw !important;
+		max-height: 100px !important;
+	}
+
+	.menuSection{
+		
 	}
 
 	.image-holder {
@@ -349,7 +358,7 @@ page-news {
         width: 95%;
         height: 50vh;
         text-align: center;
-        padding: 40px 10px 90px 10px;
+        padding: 10px 10px 90px 10px;
         .mainTexts {
             font-size: 2.5rem;
         }
@@ -468,6 +477,20 @@ page-news {
 		}
 	}
 
+	.contact-button {
+        text-align: center;
+        margin: 0 auto !important;
+        margin-top: 20px !important;
+        width: 20% !important;
+        background: rgb(196,148,51);
+        color: white;
+        border-radius: 20px;
+        h2 {
+            margin: 0 auto !important;
+            font-size: 15px !important;
+        }
+    }
+
 	.slidesHolder2 {
 		margin-bottom: 10px;
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -482,6 +505,7 @@ page-news {
 			.slidesCard2 {
 				width: 100%;
 				display: inline-flex;
+				padding-bottom: 50px;
 				div {
 					margin-top: 10px;
 					margin-left: 10px;
@@ -490,7 +514,7 @@ page-news {
 					text-align: center;
 					div {
 						border: 1px solid rgba(0, 0, 0, 0.116);	
-						box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.212); 
+						box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.116); 
 						padding: 20px;
 						border-radius: 5px;
 					}
@@ -511,8 +535,8 @@ page-news {
 						font-size: 50px;
 						text-align: center;
 						ion-icon {
-							margin: 15px 0 0 0;
-							font-size:70px;
+							margin: 20px 0 0 0;
+							font-size:50px;
 						}
 					}
 					ion-label {
