--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -14,17 +14,46 @@ page-profile {
   }
   #map {
     height: 100%;
-    box-shadow:0 0 20px rgba(0,0,0,0.3);
   }
   .mapContainer {
       width: 100%;
       height: 50vh;
       margin: 0 auto;
-       box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   }
   .map-col{
   	padding:0px !important;
   }
+
+  .contactUsSection {
+    background-color: #EEF1EF;
+    padding:50px;
+    max-height:500px;
+
+    img{
+        padding-top:5px;
+        height:334px;
+    }
+}
+
+.inputSection {
+        display: inline-flex;
+        border-radius: 50px;
+        border: 2px solid rgb(196,148,51);
+        overflow: hidden;
+        font-size: 1.5rem;
+        input {
+            padding: 15px;
+            background-color:#EEF1EF;
+            border:none;
+        }
+        button {
+            color: #ffffff;
+            font-size: 1.5rem;
+            background: rgb(196,148,51);
+            border: none;
+        }
+    }
+
 
 .cover2 {
 		background: url('../assets/imgs/banner/menupage.png') no-repeat center center fixed !important;
