--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -92,17 +92,17 @@ ion-toolbar {
     }
 
 .first-section2 {
-    padding: 0px 20px 20px 20px;
+    padding: 20px;
 }
 
 .second {
-    padding: 50px 20px 0px 20px;
+    //padding: 50px 20px 0px 20px;
 }
 
 .third{
     padding: 30px 20px 0px 20px;
     margin-bottom: 8vw;
-    margin-top:4vw;
+    margin-top:1vw;
 }
 
 .padding-all { 
@@ -123,8 +123,7 @@ ion-toolbar {
     padding:15px;
     pading-top:50px;
     padding-bottom:50px;
-    max-height:400px;
-
+    max-height:450px;
     img{
         padding-top:5px;
         height:370px;
