--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,6 +20,19 @@ ion-toolbar {
    --background-color: transparent;
    --ion-color-base: transparent !important;
  }
+ ion-list {
+     .item-block {
+         
+         .item-inner {
+        padding-right: 16px !important;
+        border: none !important;
+        .input-wrapper {
+            border-bottom: 1px solid #dedede;
+        }
+    }
+     }
+   
+ }
 
 .titleText {
 		 font-family: 'Cookie Curvy' !important;
@@ -139,22 +152,57 @@ ion-toolbar {
     .menuHeader {
             width: 100%;
             text-align: center;
+            height: 32vh;
         img {
             height: 20vh;
             margin: 0 auto;
         }
     }
     	.curvyFont {
-		 font-family: 'Cookie Curvy';
+		 font-family: 'Cookie Curvy' !important;
 	 }
 	.headFont {
 		font-family: 'Josef Sans' !important;
     }
+    #map {
+    height: 100%;
+    box-shadow: none !important;
+    }
+    .mapContainer {
+		width: 100%;
+		height: 50vh;
+		margin: 0 auto;
+    box-shadow: none !important;
+		margin: 0 auto;
+		// border: 3px solid rgb(29,29,29);
+    }
+    .mobile-footer {
+		// border-radius: 0px 80px 0px 0px;
+		color: #ffffff;
+		.eatIcon {
+			font-size: 3.5rem;
+			position: absolute;	
+			top: 20px;
+			right: 10px;
+			.eatIconContent {
+				position: relative;
+                display: inline-flex;
+                right: -15px;
+				.eatSubText {
+					font-size: 1.2rem;
+					width: 20vw;
+					margin-top: 5px !important;
+				}		
+			}
+		}		
+		
+	}
     .footerSect {
         background: rgba(184, 184, 184, 0.11);
     }
       .bar-header {
         color: black !important; 
+        padding-right: 20px;
         	.button-header {
 			text-align: center;
 			margin: 0px auto !important;
@@ -163,7 +211,8 @@ ion-toolbar {
 			color: white;
 			width: 100%;
 			border-radius: 10px;
-			padding: 18px;
+            padding: 18px;
+            padding-right: 12px;
 			h2 {
 				margin: 0 auto !important;
 				font-size: 15px !important;
