Updated About page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -23,7 +23,7 @@
   <div color="goldenBrown" class="first-header headerDeskColor">
     <div>
       <ion-row color="goldenBrown">
-        <p style="padding: 10px;margin:0 !important;width:200px;"> <ion-icon name="tablet-portrait" style="margin-right:8px !important;margin-left:20px !important;vertical-align:middle;"></ion-icon> (+088) 589-8745</p>
+        <p style="padding: 10px;margin:0 !important;width:300px;"> <ion-icon name="tablet-portrait" style="margin-right:8px !important;margin-left:100px !important;vertical-align:middle;"></ion-icon> (+088) 589-8745</p>
         <p style="padding: 10px;margin:0;width:300px"> <ion-icon  style="margin-right:8px !important;vertical-align:middle;" name="time"></ion-icon> Business Hours: 8:00am - 11:30pm</p>
       <!-- <ion-buttons style="margin-right:0;" class="bar-buttons bar-buttons-md">
       <button color="" ion-button="" *ngFor="let p of pagesDesk"
@@ -49,7 +49,7 @@
     <ion-buttons end="" margin-left="" class="bar-buttons bar-buttons-md" style="margin-right:100px;">
       <button color="" ion-button="" *ngFor="let p of pagesDesk" (click)="openPage(p)"
         class="bar-button bar-button-md bar-button-default bar-button-default-md">
-        <span class="">{{p.title}}</span>
+        <span class="headFont"><strong>{{p.title}}</strong></span>
         <div class="button-effect"></div>
       </button>
     
