--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -664,6 +664,7 @@ page-gallery-tabs {
             font-size: 1.5rem;
             background: rgb(196,148,51);
             border: none;
+            width:100px !important;
         }
     }
 
