--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -13,11 +13,10 @@ page-profile {
     padding-left: 10px;
   }
   #map {
-    height: 100%;
+    height: 550px;
   }
   .mapContainer {
       width: 100%;
-      height: 50vh;
       margin: 0 auto;
   }
   .map-col{
@@ -35,16 +34,19 @@ page-profile {
     }
 }
 
-
-
-
 .cover2 {
-		background: url('../assets/imgs/banner/menupage.png') no-repeat center center fixed !important;
+		background: url('../assets/imgs/banner/Events.png') no-repeat center center fixed;
+		position: relative;
 		box-shadow: -200px -35px 75px -51px rgba(0,0,0,0.75);
-		height: 20vw;
-		max-height:500px;
-		min-height:300px;
-	}
+		border: .5px solid black;
+        height: 20vw;
+        max-height:500px;
+        min-height:300px;
+        img {
+                max-height: 52vw;
+    width: 100%;
+        }
+    }
 
 .inputSection {
         display: inline-flex;
@@ -62,6 +64,7 @@ page-profile {
             font-size: 1.5rem;
             background: rgb(196,148,51);
             border: none;
+            width:100px !important;
         }
     }
 
