--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -48,7 +48,7 @@ $colors: (
 
 );
 
-$card-md-box-shadow:4px 6px 4px 5px rgba(0, 0, 0, .03);
+$card-md-box-shadow:0px 0px 20px 3px rgba(0, 0, 0, 0.03);
 
 // App iOS Variables
 // --------------------------------------------------
